# ssdp-upnp

./: .gitignore  README.md  ssdp-upnp.cabal
src/: Test.hs
src/Network/: SSDP.hs  UPnP.hs
src/Network/SSDP/: Headers.hs  Parser.hs  Render.hs  Types.hs  UUID.hs
src/Network/UPnP/: Parser.hs  Render.hs  Types.hs
